# ai-coding-tools

./: data-visualizer-claude.html  interactive_learning_regression_gpt5_thinking.html  landing-page-claude.html  simple_todo_app_with_make-real-tldraw.html  todo_app_simple_claude.html  web_learning_canvas.html
claude-code-best-practices/: README.md
claude-code-best-practices/examples/: sample-claude-md.md
claude-code-best-practices/exercises/: practical-exercises.md
claude-code-best-practices/handouts/: quick-reference-card.md  student-handout.md
claude-code-best-practices/instructor-materials/: instructor-guide.md
claude-code-best-practices/slides/: claude-code-best-practices-slides.md
mcp-server-utilities/: package-lock.json  package.json
mcp-server-utilities/src/: index.ts
python-learning-env/: Makefile
python-learning-env/python-learning/: README.md  code_helper.py  pyproject.toml  python_basics.ipynb
python-learning-env/python-learning/.ipynb_checkpoints/: python_basics-checkpoint.ipynb
python-learning-env/python-learning/scripts/: calculator.py  data_analysis.py  file_operations.py  hello_world.py  web_scraper.py
python-learning-env/python-learning/src/python_learning/: __init__.py
